Label now truncates; fixed label tests.
Col/Row minimum is no longer set for horizontal/veritical labels.
If the text is too long, the label is truncated intelligently and ellipses
are appended.
Italic text is padded a bit to compensate for the tilted letters.

Close #84. Close #89.

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ div {
   display: inline;
 }
 
-.text-label text {
+.label text {
   font-family: Helvetica;
 }
 
